[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { path = "src/logger" }
riscv = {version = "0.16.0", features = ["s-mode"]}

[[bin]]
name = "kernel"
test = false
doctest = false
bench = false
doc = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"