[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]


[target.riscv64gc-unknown-none-elf.dependencies]
riscv = {version = "0.16.0", features = ["s-mode"]}
rustsbi = { version = "0.4.0", features = ["machine"] }

[[bin]]
name = "kernel"
test = false
doctest = false
bench = false
doc = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"